--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,5 +12,6 @@
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     <a href="{{path('builder-pattern')}}"><h2>Builder pattern</h2></a>
+    <a href="{{path('singleton-pattern')}}"><h2>Singleton pattern</h2></a>
 </div>
 {% endblock %}
