--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -13,5 +13,8 @@
 
     <a href="{{path('builder-pattern')}}"><h2>Builder pattern</h2></a>
     <a href="{{path('singleton-pattern')}}"><h2>Singleton pattern</h2></a>
+    <a href="{{path('observer-pattern')}}"><h2>OBSERVER pattern</h2></a>
+    <a href="{{path('factoryMethod-pattern')}}"><h2>Factory Method pattern</h2></a>
+    <a href="{{path('abstractFactory-pattern')}}"><h2>Abstract Factory pattern</h2></a>
 </div>
 {% endblock %}
