--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -16,5 +16,6 @@
     <a href="{{path('observer-pattern')}}"><h2>OBSERVER pattern</h2></a>
     <a href="{{path('factoryMethod-pattern')}}"><h2>Factory Method pattern</h2></a>
     <a href="{{path('abstractFactory-pattern')}}"><h2>Abstract Factory pattern</h2></a>
+    <a href="{{path('flyweight-pattern')}}"><h2>Flyweight pattern</h2></a>
 </div>
 {% endblock %}
