--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -17,5 +17,6 @@
     <a href="{{path('factoryMethod-pattern')}}"><h2>Factory Method pattern</h2></a>
     <a href="{{path('abstractFactory-pattern')}}"><h2>Abstract Factory pattern</h2></a>
     <a href="{{path('flyweight-pattern')}}"><h2>Flyweight pattern</h2></a>
+    <a href="{{path('decorator-pattern')}}"><h2>Decorator pattern</h2></a>
 </div>
 {% endblock %}
