--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -18,5 +18,6 @@
     <a href="{{path('abstractFactory-pattern')}}"><h2>Abstract Factory pattern</h2></a>
     <a href="{{path('flyweight-pattern')}}"><h2>Flyweight pattern</h2></a>
     <a href="{{path('decorator-pattern')}}"><h2>Decorator pattern</h2></a>
+    <a href="{{path('adapter-pattern')}}"><h2>Adapter pattern</h2></a>
 </div>
 {% endblock %}
